CHANGES IN FLTK 1.1.3

	- Documentation updates.
	- Fl_Scroll didn't compute the location of labels to the
	  right or below when determining the area to erase.
	- Added backward-compatibility macro for
	  filename_setext().
	- Fl_Bitmap::copy(), Fl_Pixmap::copy(), and
	  Fl_RGB_Image::copy() all could overflow the source
	  image when scaling the image.
	- Double/triple clicks in Fl_Input fields didn't copy
	  the expanded selection to the clipboard.
	- Fl_Glut_Window and Fl_Gl_Window didn't always initialize
	  the OpenGL context on MacOS.


CHANGES IN FLTK 1.1.2

	- Fl_Menu_Bar now supports drawing vertical dividers
	  between menu items and submenus in the menu bar.
	- Fl_File_Chooser::value() didn't return NULL when the
	  user clicked Cancel while selecting a directory.  This
	  bug also affected fl_dir_chooser().
	- Fl_Menu_::add(const char *) used too small a menu item
	  label buffer and didn't do bounds checking.
	- Eliminate some compiler warnings with CodeWarrier
	  under WIN32 (Paul Chambers)
	- Fl_Gl_Window widgets did not resize properly under
	  MacOS X.
	- The cursor could be set for the wrong window in the
	  text widgets.
	- Fl_Check_Browser didn't provide const char * add
	  methods as documented.
	- Fl_Check_Browser didn't draw the same style of check
	  marks at the other widgets.
	- Fl_Button, Fl_Choice, and Fl_Menu_Button incorrectly
	  activated the button/menu when the spacebar was
	  pressed in conjunction with shift, control, alt, or
	  meta.
	- FLTK should now compile with Xft 2.0.
	- Some versions of Tru64 4.0 have snprintf and
	  vnsprintf, but don't have the prototypes for those
	  functions.
	- FLTK had trouble doing character composition with some
	  keyboard layouts under X11 (in particular, Belgian).
	- Fl_Text_Editor would cause a segfault if the user
	  pressed CTRL-V (paste) without having any data in the
	  clipboard...
	- The tab key moved backwards in menus instead of
	  forwards.  Shift-tab still moves backwards.